# mlops-zoomcamp

./: .gitignore  pyproject.toml
01-intro/: homework.ipynb  pyproject.toml
01-intro/notebooks/: duration-prediction.ipynb  homework.ipynb
02-experiment-tracking/notebooks/: duration-prediction.ipynb  nyc-taxi-experiment.db  taxiexperiment.db
02-experiment-tracking/notebooks/mlruns/0/: meta.yaml
02-experiment-tracking/notebooks/mlruns/1/52590877a3da4d469d438fd7e71defb0/artifacts/model/: MLmodel  python_env.yaml
02-experiment-tracking/notebooks/mlruns/1/5783cc487b7d4067b985854278a5c1f7/artifacts/: feature_importance_weight.json
02-experiment-tracking/notebooks/mlruns/1/5783cc487b7d4067b985854278a5c1f7/artifacts/model/: MLmodel
02-experiment-tracking/notebooks/mlruns/1/6dc08fb893374e2aacf22c7f48a7ddf1/artifacts/models_mlflow/: MLmodel  conda.yaml
