[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "Env for course"
authors = ["rosaav"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.7"
mlflow = "^2.15.1"
scikit-learn = "^1.5.1"
pyarrow = "^15.0.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
