[tool.poetry]
name = "01-intro"
version = "0.1.0"
description = "Env for intro project"
authors = ["rosaav"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.7"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
numpy = "^2.0.1"
pyarrow = "^17.0.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
